fix blurry

--- a/frontend/src/css/_home.scss
+++ b/frontend/src/css/_home.scss
@@ -6,7 +6,7 @@
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   box-shadow: inset 1rem 1rem 8rem rgba($black,0.15);
-  @include media-breakpoint-down(sm) {
+  @media (max-width: 750px) {
     background-position: 50% calc(50% - 7vh);
   }
 }
@@ -14,7 +14,7 @@
   display: table-cell;
   vertical-align: middle;
   @include gradient-directional(rgba(darken($primary,5%), 1), rgba(lighten($primary, 15%),1), 160deg);
-  @include media-breakpoint-down(sm) {
+  @media (max-width: 750px) {
     @include gradient-directional(rgba(darken($primary,5%), 0.6), rgba(lighten($primary, 15%),0.6), 160deg);
   }
 }
@@ -22,7 +22,7 @@
 /* Padding for spacing */
 .cover-container {
   padding: 1.5rem;
-  @include media-breakpoint-down(sm) {
+  @media (max-width: 750px) {
     position: relative;
     top: -7vh;
   }
@@ -30,12 +30,23 @@
 
 #protein-image{
   display: block;
-  height:420px;
-  @include media-breakpoint-down(sm) {
-    display:none;
+  position: relative;
+  height: 420px;
+  @media (max-width: 750px) {
+    display: none;
   }
   @include media-breakpoint-down(md) {
-    height:340px;
+    height: 340px;
+  }
+
+  // Ensure absolutely positioned images are constrained to container width
+  .no-glow, .glow {
+    width: 100%;
+
+    img, picture {
+      max-width: 100%;
+      height: auto;
+    }
   }
 }
 
@@ -50,7 +61,7 @@ $search-colors: rgba($white,0.4);
     font-weight:100;
     font-size: 2.5rem;
     margin-left:-0.8rem;
-    @include media-breakpoint-down(sm) {
+    @media (max-width: 750px) {
       font-size: 2rem;
       margin-top: 2rem;
     }
